# aag-core

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
src/aag/: data.py  utils.py
tests/: test_utils.py
